syntax = "proto3";

package scufflecloud.core.v1;

import "google/protobuf/timestamp.proto";
import "scufflecloud/core/v1/constraints.proto";

message UserSession {
  string user_id = 1 [(string_constraint).id = true];
  bytes device_fingerprint = 2;
  google.protobuf.Timestamp last_used_at = 3;
  IpAddressInfo last_ip = 4;
  optional string last_user_agent = 5;
  optional string token_id = 6 [(string_constraint).id = true];
  optional google.protobuf.Timestamp token_expires_at = 7;
  google.protobuf.Timestamp expires_at = 8;
  bool mfa_pending = 9;
}

message IpAddressInfo {
  string ip_address = 1;
  optional string geo_country = 2;
  optional string geo_city = 3;
}
